@@ -1,3 +1,11 @@
+2003-11-20  Martin Schwidefsky  <schwidefsky@de.ibm.com>
+
+	* elf32-s390.c (elf_s390_relocate_section): Don't recalculate symbol
+	section for reloc output and subtract the output section's address
+	from the addend when converting a relocation into one against a
+	section symbol.
+	* elf64-s390.c (elf_s390_relocate_section): Likewise.
+
 2003-11-18  James E Wilson  <wilson@specifixinc.com>
 
 	* elfxx-ia64.c (get_fptr): For fptr_rel, use dynobj not abfd.
